--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 h2 {
   text-align: center;
+  font-weight: bold;
   margin: 50px 0;
+  color: teal;
 }
 form {
   width: 50%;
@@ -27,4 +29,13 @@ form button {
   border: none;
   border-radius: 12px;
   cursor: pointer;
+}
+span {
+  display: block;
+  font-size: 15px;
+  margin-top: 25px;
+}
+span a {
+  color: teal;
+  font-weight: bold;
 }
